--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0"
   },
   "devDependencies": {		
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",		
